# cortexel

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MIGRATION.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  brand.md  bunfig.toml  index.ts  lake-manifest.json  lakefile.toml  package.json  scratch_edge.ts  scratch_psth.ts  scratch_repro.ts  tsconfig.json  tsup.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  release-blocker.yml
.github/workflows/: ci.yml
.superstack/: build-context.md  review-report.html
contract/: README.md  manifest.v1.json
contract/meta/: canonicalization-registry.schema.json  contract-source.schema.json
contract/registries/: budget-profiles.v1.json  capabilities.v1.json  disclosures.v1.json  error-codes.v1.json  identity.v1.json  legacy-skill-map.v1.json  numeric-policies.v1.json  palettes.v1.json  renderers.v1.json  semantic-validators.v1.json  units.v1.json
contract/schemas/: common.v1.schema.json  figure-artifact.v1.schema.json  figure-request.v1.schema.json  stable-figure-request-union.v1.schema.json  (+1 more)
core/: colormaps.ts  designLaws.ts  index.ts  provenance.ts  safeRuntime.ts  vizSpec.ts
docs/: AUDIT-2026-07.md  CORRELOGRAM_PEARSON_FUTURE.md  KNOWN_LIMITATIONS.md  OUTPUT_AUTHORITY.md  PROVENANCE.md  SCOPE.md  SECURITY_MODEL.md  VERSIONING.md
formal/: README.md  WeightRowSaturation.lean
python/: .gitignore  README.md  pyproject.toml
python/src/cortexel/: __init__.py  canonicalize.py  identity.py  parse_json.py  validate.py
python/src/cortexel/contract/schemas/: common.v1.schema.json
python/src/cortexel/contract/schemas/skills/: network.delay_distribution.request.v1.schema.json  network.weight_distribution.request.v1.schema.json  network.weight_matrix.request.v1.schema.json  neuro.analog_trace.request.v1.schema.json  neuro.compartment_trace.request.v1.schema.json  neuro.multisignal_trace.request.v1.schema.json  neuro.phase_plane.request.v1.schema.json  neuro.spike_raster.request.v1.schema.json
python/tests/: test_cortexel.py
react/: ExpandableNeurons.tsx  ExpandablePopulation.tsx  KnowledgeGraph3DScene.tsx  KnowledgeGraphA11yList.tsx  SelectionA11yControls.tsx  VizSpecRenderer.tsx  index.ts  knowledgeGraph.ts  neuronShaders.ts  usePopulationExpand.ts
reference/: README.md
scripts/: check-evidence-ledger.ts  check-generated.ts  emit-manifest.ts  finalize-package.ts  generate-contract.ts  prepare-package.ts  smoke-package.ts  smoke-python-package.py  verify-release.ts
src/: index.ts
test/: accessibilityTableParity.test.ts  analysis.test.ts  artifactBatchOperationSchema.test.ts  artifactDerivationSkillBinding.test.ts  artifactSchemaHonesty.test.ts  artifactSkillIdentity.test.ts  authoring.test.ts  boundaryResourceHardening.test.ts  budgetAndSummary.test.ts  canonicalizationSource.test.ts  canonicalize.test.ts  capabilityExportHonesty.test.ts  capabilitySource.test.ts  cli.test.ts  cliPublicationFailures.test.ts  compartmentTraceIdentity.test.ts  contractExamples.test.ts  contractSourceMetaSchema.test.ts  coreHardening.test.ts  coreIsHostAgnostic.test.ts  corpusKnowledgeGraph.test.ts  correlogramContractRedesign.test.ts  correlogramRendererRedesign.test.ts  crossLanguageParity.test.ts  d3ForceContract.test.ts  designLaw.test.ts  disclosureCompleteness.test.ts  disclosureSurfaces.test.ts  discovery.test.ts  distributionConservation.test.ts  emitManifestExecution.test.ts  evidenceLedger.test.ts  exactBinary64.test.ts  expandableNeurons.test.ts  generatedSnapshot.test.ts  generatorSourceJson.test.ts  geometryCompleteness.test.ts  hostInvocation.test.ts  identitySource.test.ts  importBoundary.test.ts  (+62 more)
types/: d3-force-3d.d.ts
(+153 files in other folders)
