[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "cortexel"
version = "0.10.0.dev0"
description = "Independent Python reader for Cortexel scientific figure contracts: strict parsing, RFC 8785 canonicalization, SHA-256 digests, and structural + semantic validation."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Sepehr Mahmoudian" }]
keywords = [
  "scientific-visualization",
  "computational-neuroscience",
  "spiking-neural-networks",
  "data-provenance",
  "reproducible-research",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Visualization",
]
# The base package is pure standard library on purpose: no jsonschema, no NumPy, and it
# never invokes Node. Independence is the point — its agreement with the TypeScript side
# is evidence only because it shares no code with it.
dependencies = []

[project.urls]
Homepage = "https://github.com/sepahead/cortexel"
Repository = "https://github.com/sepahead/cortexel.git"
Issues = "https://github.com/sepahead/cortexel/issues"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["src/cortexel"]
exclude = ["**/__pycache__/**", "**/*.pyc", "**/*.pyo", "**/.DS_Store"]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
only-include = ["src/cortexel", "README.md", "LICENSE", "tests/test_cortexel.py"]
exclude = ["**/__pycache__/**", "**/*.pyc", "**/*.pyo", "**/.DS_Store"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/cortexel"]
show_error_codes = true
warn_unused_configs = true
